--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -44,10 +44,10 @@
   display: flex;
   justify-content: space-between;
   gap: 24px;
-  padding-top: 24px;
-  padding-bottom: 16px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-top: 40px;
+  padding-bottom: 0;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .headerCopy h1 {
